--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <tbody>
     <tr>
       <td>
-        <img src="bunny.png" height="200" width="200"/>
-        <img src="bunny1.png" width="200"/>
+        <img src="bunny1.png" height="200" width="200"/>
+        <img src="bunny2.png" width="200"/>
       </td>
     </tr>
   </tbody>
